# ferrite

./: Cargo.toml
docs/: architecture.md
docs/reference/minecraft-java-26.2/: README.md  behavior-surfaces.toml  command-roots.toml  completion.toml  content-dispatch-roots.md  coverage.md  cross-system-joins.toml  data-reload-roots.md  game-rule-consumers.md  goal-prompt.md  lock.toml  methodology.md  network-ingress-roots.md  persistence-reload-roots.md  player-lifecycle-roots.md  sources.md  world-lifecycle-roots.md
docs/reference/minecraft-java-26.2/behavior/: 01-tick-time-and-chunks.md  02-blocks-and-updates.md  03-environment.md  04-redstone-and-explosions.md  05-player-movement-and-interaction.md  06-items-inventories-and-progression.md  07-entities-and-combat.md  08-mobs-ai-and-spawning.md  09-worldgen-and-dimensions.md  10-client-observable-behavior.md
docs/reference/minecraft-java-26.2/catalog/: README.md  catalog.toml
docs/reference/minecraft-java-26.2/experiments/: README.md  definitions.toml  results.md
docs/reference/minecraft-java-26.2/mechanics/: 01-simulation.md  02-blocks.md  03-environment.md  04-redstone.md  05-player.md  06-container-transactions.md  06-items.md  06-recipes-and-crafting.md  07-entities.md  08-mobs.md  09-world.md  10-client.md  README.md
docs/reference/minecraft-java-26.2/protocol/: README.md  completion.toml  conformance.md  framing-and-primitives.md  handshake-and-status.md  login-and-configuration.md  ordering-and-acknowledgements.md  (+3 more)
tools/mc-reference/: Cargo.toml
tools/mc-reference/src/: lib.rs  main.rs
(+172 files in other folders)
